# llm-platform

./: .gitignore  README  README.md  docker-compose.yml  llm-platform.code-workspace
.github/workflows/: deploy.yaml  terraform-plan.yml  terraform.yml
api/: .dockerignore  Dockerfile  main.py  pyproject.toml  request.json
cli/: README.md  main.py  pyproject.toml
gossip-glomers/: .gitignore  README.md
gossip-glomers/maelstrom-broadcast/: go.mod  main.go
gossip-glomers/maelstrom-counter/: go.mod  main.go
gossip-glomers/maelstrom-echo/: go.mod  main.go
gossip-glomers/maelstrom-kafka/: go.mod  main.go
gossip-glomers/maelstrom-txn/: go.mod  main.go
gossip-glomers/maelstrom-unique-ids/: go.mod  main.go
infra/kubernetes/: README  cluster.yaml  service.yaml
infra/terraform/: README
load-test/: locustfile-tgi.py  locustfile.py  pyproject.toml
mit-6.5840/: README.md
monitoring/: README.md  docker-compose.yml  prometheus-tgi.yml  prometheus.yml
old/api/: Dockerfile  api.py
old/llm/: Dockerfile  README.md
old/monitoring/: README.md  prometheus.yml  rules-tgi.yml  rules.yml
old/sdk-test/: ollama_example.py  openai_example.py  pyproject.toml
old/vllm/: docker-compose.yml
openai-test/: latency_optimization.txt  main.py  pyproject.toml
rag/: evals.py  evals_promptv1.txt  pyproject.toml  rag.py  rag_evals_results.csv
rag/experiments/: 20260102-145223-squad_experiment.csv  20260102-145551-squad_experiment.csv
sdk-test/: anthropic_example.py  google_example.py  huggingface_example.py  litellm_example.py  pyproject.toml
tgi/: docker-compose.yml
(+44 files in other folders)
